Kubernetes/manifests/monitoring/ingress-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prom
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Redirects path back to / before forwarding to service e.g. i.homelab/nginx -> serviceIP/
spec:
  ingressClassName: nginx
  rules:
  - host: prom.homelab.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
